changed content width (added horizontal margins) changed font size, and paddings beetween images

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -20,7 +20,7 @@
 
 <body>
   <header role="banner">
-    <!-- <div class="container"> -->
+    <div class="container">
     <div class="row m-0 p-0">
       <div class="col banner-logo">
         <a href="index.html"><img id="logo-main" src="assets/warkot_logo.jpg" width="200" alt="Logo Thing main logo"></a>
@@ -28,15 +28,16 @@
 
       <div class="col text-end header-social-media">
         <ul class="social-network">
-          <li><a class="text-decoration-none text-reset" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram fa-5x header-ico"></i></a></li>
-          <li><a class="text-decoration-none text-reset" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook-square fa-5x header-ico"></i></a></li>
+          <li><a class="text-decoration-none text-reset" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram fa-3x header-ico pe-2 pt-3"></i></a></li>
+          <li><a class="text-decoration-none text-reset" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook-square fa-3x header-ico pt-3"></i></a></li>
         </ul>
       </div>
     </div>
+  </div>
   </header>
 
   <nav class="navbar navbar-expand-md navbar-light">
-    <div class="container-fluid">
+    <div class="container">
       <!-- <a class="navbar-brand" href="#">Navbar</a> -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -45,7 +46,7 @@
       <div class="collapse navbar-collapse row" id="navbarSupportedContent">
         <div class="col-md text-center"><a class="text-decoration-none text-reset" href="warkot.html">WARKOT</a></div>
         <div class="col-md text-center"><a class="text-decoration-none text-reset" href="motorcycles.html">MOTOCYKLE</a></div>
-        <div class="col-md text-center"><a class="text-decoration-none text-reset" href="aboutUs.html">O NAS</a></div>
+        <div class="col-md text-center"><a class="text-decoration-none text-reset link-grey" href="aboutUs.html">O NAS</a></div>
         <div class="col-md text-center"><a class="text-decoration-none text-reset" href="offer.html">OFERTA</a></div>
         <div class="col-md text-center"><a class="text-decoration-none text-reset" href="contact.html">KONTAKT</a></div>
       </div>
@@ -53,30 +54,30 @@
   </nav>
 
 <!-- content -->
-<div class="container-fluid my-5">
+<div class="container my-5">
   <!-- <div class="row mx-3"> -->
     <div class="row">
 
-      <div class="col-md-6 px-2 pb-2">
+      <div class="col-md-6 px-0 px-md-2 pb-2">
         <img class="img-fluid" src="assets/warkot_bracia1.jpg" alt="some alt">
       </div>
       <div class="col-md-6 px-2 pb-2">
         <h2 class="ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1"><b>WARKOT</b></h2>
-        <p class="page_aboutUs_font t-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
+        <p class="page_aboutUs_font t-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-2 pb-lg-2 pb-md-1 m-0">
           MACIEJ, MATEUSZ I MICHAŁ - JESTEŚMY BRAĆMI, KTÓRYCH POŁĄCZYŁA PASJA DO
           KLASYCZNEJ MOTORYZACJI, A W SZCZEGÓLNOŚCI DO STARYCH MOTOCYKLI Z PRZEŁOMU LAT 60-80 XX WIEKU.
         </p>
-        <p class="page_aboutUs_font t-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
+        <p class="page_aboutUs_font t-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2pb-xl-2 pb-lg-2 pb-md-1 m-0">
           WSZYSTKO ZACZĘŁO SIĘ W DZIECIŃSTWIE, KIEDY TO NASI OJCOWIE ZABIERALI NAS
           NA PRZEJAŻDŻKI SWOIMI MOTOCYKLAMI. CZĘSTO TEŻ PRZYGLĄDALIŚMY SIĘ JAK JE
           NAPRAWIALI, A DŹWIĘK SILNIKA PRZYWRÓCONEGO DO ŻYCIA I ZAPACH ŚWIEŻO WLANEJ
           BENZYNY OD RAZU SPRAWIAŁ, ŻE MIELIŚMY UŚMIECH NA TWARZY.
         </p>
-        <p class="page_aboutUs_font t-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
+        <p class="page_aboutUs_font t-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-2 pb-lg-2 pb-md-1 m-0">
           ZACZĘŁO SIĘ OD MOTORYNKI I KOMARA 2351, JEŹDZILIŚMY RÓWNIEŻ NA MOTOCYKLACH
           ENDURO, A OBECNIE W GARAŻU MAMY M.IN. BMW R90/6, TRIUMPHA SCRAMBLERA 900, SUZUKI GS400.
         </p>
-        <p class="page_aboutUs_font t-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
+        <p class="page_aboutUs_font t-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-2 pb-lg-2 pb-md-1 m-0">
           NASZYM CELEM JEST BUDOWANIE WYJĄTKOWYCH I NIETUZINKOWYCH MASZYN Z DUSZĄ, KTÓRE SŁUŻĄ
           NIE TYLKO DO PRZEMIESZCZANIA SIĘ , ALE RÓWNIEŻ DAJĄ POCZUCIE WOLNOŚCI I FRAJDĘ Z JAZDY.
         </p>
@@ -84,13 +85,13 @@
       </div>
 
 
-      <div class="col-md-4 ps-2 pe-1 pb-2">
-        <img class="img-fluid" src="assets/warkot_mateusz7.jpg" alt="">
+      <div class="col-md-4 ps-0 ps-md-2 pe-0 pe-md-1 pb-2 d-flex align-items-stretch">
+        <img class="img-fluid" src="assets/warkot_mateusz.jpg" alt="">
       </div>
-      <div class="col-md-8 ps-1 pe-2 pb-2" >
+      <div class="col-md-8 ps-0 ps-md-1 pe-0 pe-md-2 pb-2 d-flex align-items-stretch" >
         <img class="img-fluid" src="assets/warkot_maciek.jpg" alt="some alt">
       </div>
-      <div class="col ps-2 pe-2">
+      <div class="col ps-0 ps-md-2 pe-0 pe-md-2">
         <img class="img-fluid" src="assets/warkot_bracia2.jpg" alt="some alt">
       </div>
 
