--- a/offer.html
+++ b/offer.html
@@ -20,7 +20,7 @@
 
 <body>
   <header role="banner">
-    <!-- <div class="container"> -->
+    <div class="container">
     <div class="row m-0 p-0">
       <div class="col banner-logo">
         <a href="index.html"><img id="logo-main" src="assets/warkot_logo.jpg" width="200" alt="Logo Thing main logo"></a>
@@ -28,15 +28,16 @@
 
       <div class="col text-end header-social-media">
         <ul class="social-network">
-          <li><a class="text-decoration-none text-reset" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram fa-5x header-ico"></i></a></li>
-          <li><a class="text-decoration-none text-reset" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook-square fa-5x header-ico"></i></a></li>
+          <li><a class="text-decoration-none text-reset" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram fa-3x header-ico pe-2 pt-3"></i></a></li>
+          <li><a class="text-decoration-none text-reset" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook-square fa-3x header-ico pt-3"></i></a></li>
         </ul>
       </div>
     </div>
+  </div>
   </header>
 
   <nav class="navbar navbar-expand-md navbar-light">
-    <div class="container-fluid">
+    <div class="container">
       <!-- <a class="navbar-brand" href="#">Navbar</a> -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -46,14 +47,14 @@
         <div class="col-md text-center"><a class="text-decoration-none text-reset" href="warkot.html">WARKOT</a></div>
         <div class="col-md text-center"><a class="text-decoration-none text-reset" href="motorcycles.html">MOTOCYKLE</a></div>
         <div class="col-md text-center"><a class="text-decoration-none text-reset" href="aboutUs.html">O NAS</a></div>
-        <div class="col-md text-center"><a class="text-decoration-none text-reset" href="offer.html">OFERTA</a></div>
+        <div class="col-md text-center"><a class="text-decoration-none text-reset link-grey" href="offer.html">OFERTA</a></div>
         <div class="col-md text-center"><a class="text-decoration-none text-reset" href="contact.html">KONTAKT</a></div>
       </div>
     </div>
   </nav>
 
 <!-- content -->
-<div class="container-fluid my-5">
+<div class="container my-5">
   <div class="row">
 
     <div class="col-md-7 px-2 pb-2">
@@ -71,18 +72,18 @@
         DO KAŻDEGO PROJEKTU PODCHODZIMY INDYWIDUALNIE.
       </p>
     </div>
-    <div class="col-md-5 px-2 pb-2">
+    <div class="col-md-5 px-0 px-md-2 pb-2">
       <img class="img-fluid" src="assets/warkot_offer_drift.jpg" alt="some alt">
     </div>
   </div>
 
-  <div class="row d-flex align-items-end pt-2">
+  <div class="row d-flex align-items-end">
 
-    <div class="col-md-5 ps-2 pe-1">
+    <div class="col-md-5 ps-0 ps-md-2 pe-0 pe-md-1">
       <img class="img-fluid" src="assets/warkot_offer_maciek.jpg" alt="">
     </div>
-    <div class="col-md-7 ps-1 pe-2">
-      <p class="page_offer_font t-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-5 pb-lg-4 pb-md-2">
+    <div class="col-md-7 ps-0 ps-md-1 pe-0 pe-md-2">
+      <p class="page_offer_font t-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-5 pb-lg-4 pb-md-2 pt-2 pt-md-0">
         NIE MASZ SPRZĘTU, ALE CHCIAŁBYŚ MIEĆ. NIC TRUDNEGO – POROZMAWIAMY O TWOICH OCZEKIWANIACH
         I MY ZNAJDZIEMY GO DLA CIEBIE. ZAKUPIMY I PRZETRANSPORTUJEMY DO NASZEGO GARAŻU, A PÓŹNIEJ
         ZACZNIE SIĘ CAŁA ZABAWA ☺<br/>
