--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!doctype htmlnavbar>
 
 <html lang="en">
 
@@ -16,28 +16,31 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@500&display=swap" rel="stylesheet">
-  
+
 </head>
 
 <body>
   <header role="banner">
-    <!-- <div class="container"> -->
-    <div class="row m-0 p-0">
-      <div class="col banner-logo">
-        <a href="index.html"><img id="logo-main" src="assets/warkot_logo.jpg" width="200" alt="Logo Thing main logo"></a>
-      </div>
+    <div class="container">
+      <!-- <div class="container"> -->
+      <div class="row m-0 p-0">
+        <div class="col banner-logo">
+          <a href="index.html"><img id="logo-main" src="assets/warkot_logo.jpg" width="200" alt="Logo Thing main logo"></a>
+        </div>
 
-      <div class="col text-end header-social-media m-0 p-0">
-        <ul class="social-network">
-          <li><a class="text-decoration-none text-reset" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram fa-5x header-ico"></i></a></li>
-          <li><a class="text-decoration-none text-reset" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook-square fa-5x header-ico"></i></a></li>
-        </ul>
+        <div class="col text-end header-social-media m-0 p-0">
+          <ul class="social-network">
+            <li><a class="text-decoration-none text-reset" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram fa-3x header-ico pe-2 pt-3"></i></a></li>
+            <li><a class="text-decoration-none text-reset" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook-square fa-3x header-ico pt-3"></i></a></li>
+          </ul>
+        </div>
       </div>
     </div>
   </header>
 
+
   <nav class="navbar navbar-expand-md navbar-light">
-    <div class="container-fluid">
+    <div class="container">
       <!-- <a class="navbar-brand" href="#">Navbar</a> -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -55,7 +58,7 @@
 
 
   <!-- content -->
-  <div class="container-fluid my-5 p-0">
+  <div class="container my-5 p-0">
     <!-- <div class="row mx-3"> -->
     <div class="row mx-0 p-0 pb-2">
 
@@ -63,7 +66,7 @@
         <img class="img-fluid" src="assets/warkot_start_triumph.jpg" alt="some alt">
       </div>
     </div>
-    <div class="row mx-0 p-0">
+    <div class="row mx-0 p-0 row">
 
       <div class="col-md-4 p-0">
         <div class="row">
@@ -73,14 +76,14 @@
           </div>
           <div class="col-md-12">
 
-            <img class="img-fluid" src="assets/warkot_start_droga4.jpg" alt="">
+            <img class="img-fluid" src="assets/warkot_start_droga.jpg" alt="">
           </div>
         </div>
       </div>
 
-        <div class="col-md-8 pe-0 ps-2">
-          <img class="img-fluid" src="assets/warkot_start_kaluza.jpg" alt="some alt">
-        </div>
+      <div class="col-md-8 pe-0 ps-0 ps-md-2 pt-2 pt-md-0 d-flex align-items-stretch">
+        <img class="img-fluid" src="assets/warkot_start_kaluza.jpg" alt="some alt">
+      </div>
 
     </div>
   </div>
