--- a/motorcycles/honda-cj250t.html
+++ b/motorcycles/honda-cj250t.html
@@ -15,12 +15,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@500&display=swap" rel="stylesheet">
-  
+
 </head>
 
 <body>
   <header role="banner">
-    <!-- <div class="container"> -->
+    <div class="container">
     <div class="row m-0 p-0">
       <div class="col banner-logo">
         <a href="../index.html"><img id="logo-main" src="../assets/warkot_logo.jpg" width="200" alt="Logo Thing main logo"></a>
@@ -28,15 +28,16 @@
 
       <div class="col text-end header-social-media">
         <ul class="social-network">
-          <li><a class="text-decoration-none text-reset" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram fa-5x header-ico"></i></a></li>
-          <li><a class="text-decoration-none text-reset" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook-square fa-5x header-ico"></i></a></li>
+          <li><a class="text-decoration-none text-reset" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram fa-3x header-ico pe-2 pt-3"></i></a></li>
+          <li><a class="text-decoration-none text-reset" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook-square fa-3x header-ico pt-3"></i></a></li>
         </ul>
       </div>
     </div>
+  </div>
   </header>
 
   <nav class="navbar navbar-expand-md navbar-light">
-    <div class="container-fluid">
+    <div class="container">
       <!-- <a class="navbar-brand" href="#">Navbar</a> -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -44,15 +45,16 @@
 
       <div class="collapse navbar-collapse row" id="navbarSupportedContent">
         <div class="col-md text-center"><a class="text-decoration-none text-reset" href="../warkot.html">WARKOT</a></div>
-        <div class="col-md text-center"><a class="text-decoration-none text-reset" href="../motorcycles.html">MOTOCYKLE</a></div>
+        <div class="col-md text-center"><a class="text-decoration-none text-reset link-grey" href="../motorcycles.html">MOTOCYKLE</a></div>
         <div class="col-md text-center"><a class="text-decoration-none text-reset" href="../aboutUs.html">O NAS</a></div>
+        <div class="col-md text-center"><a class="text-decoration-none text-reset" href="../offer.html">OFERTA</a></div>
         <div class="col-md text-center"><a class="text-decoration-none text-reset" href="../contact.html">KONTAKT</a></div>
       </div>
     </div>
   </nav>
 
 <!-- content -->
-<div class="container-fluid my-5">
+<div class="container my-5">
   <div class="row mx-3">
     <div class="col-md-6 m-0 p-0">
       <img class="img-fluid w-100" src="../assets/motorcycles/main_honda-cj250t.jpeg" alt="" />
