--- a/motorcycles/bmw-r45.html
+++ b/motorcycles/bmw-r45.html
@@ -57,7 +57,7 @@
   <!-- content -->
   <div class="container my-5">
     <div class="row mx-3">
-      <div class="col-md-6 m-0 p-0">
+      <div class="col-md-6 m-0 p-0 pop">
         <img class="img-fluid w-100" src="../assets/motorcycles/main_bmw-r45.jpg" alt="" />
       </div>
       <div class="col-md-6 m-0 p-0">
@@ -124,14 +124,13 @@
           </p>
       </div>
       <div class="col-md-6 float-right m-0 p-0">
-        <div>
+        <div class="pop">
         <img class="img-fluid w-100" src="/assets/motorcycles/content_bmw-r45.jpg" alt="" />
       </div>
       </div>
     </div>
   </div>
   <!-- end of content  -->
-
 
   <footer>
     <div class="footer">
@@ -151,8 +150,28 @@
   </footer>
 
 
+<!--
+  <div class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <!-- <div class="modal-dialog modal-dialog-centered modal-xl modal-lg modal-fullscreen-md-down"> -->
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <img src="" class="imagepreview" style="width: 100%;" >
+        </div>
+      </div>
+    </div>
+  </div> -->
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+  <script
+  src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+  crossorigin="anonymous"></script>
+  <script src="../assets/script/script.js"></script>
 </body>
 
 </html>
