--- a/warkot.html
+++ b/warkot.html
@@ -24,7 +24,7 @@
     <div class="container">
     <div class="row m-0 p-0">
       <div class="col banner-logo">
-        <a href="index.html"><img id="logo-main" src="assets/warkot_logo.jpg" width="200" alt="Logo Thing main logo"></a>
+        <a href="index.html"><img id="logo-main" src="assets/warkot_logo1.jpg" width="200" alt="Logo Thing main logo"></a>
       </div>
 
       <div class="col text-end header-social-media">
@@ -59,14 +59,14 @@
     <div class="row">
 
       <div class="col-md-6 p-2 pb-2">
-        <h2 class="ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1"><b>WARKOT</b></h2>
-        <p class="page_warkot_font text-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
+        <h2 class="ps-xl-0 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1 "><b>WARKOT</b></h2>
+        <p class="page_warkot_font text-justify ps-xl-0 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
           WARKOT TO MIEJSCE, W KTÓRYM POWSTAJĄ WSZYSTKIE NASZE MASZYNY. MIEJSCE,
           W KTÓRYM LECĄ ISKRY, A W POWIETRZU CZUĆ BENZYNĘ I OLEJ. TO TUTAJ NASZE
           POMYSŁY I KONCEPCJE MAJĄ SWOJE REALNE ODZWIERCIEDLENIE. ZNAJDZIECIE NAS
           W SKIERNIEWICACH- MIĘDZY ŁODZIĄ A WARSZAWĄ.
         </p>
-        <p class="page_warkot_font text-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
+        <p class="page_warkot_font text-justify ps-xl-0 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
           INSPIRACJĄ DO BUDOWY SĄ GŁÓWNIE MOTOCYKLE Z LAT 60 I 70 XX WIEKU, W
           KTÓRYCH STAWIANO NA WYSOKIEJ JAKOŚCI MATERIAŁY I RZEMIEŚLNICZĄ PRACĘ.
           W NASZYCH PROJEKTACH ZAWSZE SKUPIAMY SIĘ NA PROSTOCIE BUDOWY I
