--- a/aboutUs.html
+++ b/aboutUs.html
@@ -62,7 +62,7 @@
         <img class="img-fluid" src="assets/warkot_bracia1.jpg" alt="some alt">
       </div>
       <div class="col-md-6 px-2 pb-2">
-        <h2 class="ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1"><b>WARKOT</b></h2>
+        <h2 class="ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1"><b>O NAS</b></h2>
         <p class="page_aboutUs_font t-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-2 pb-lg-2 pb-md-1 m-0">
           MACIEJ, MATEUSZ I MICHAŁ - JESTEŚMY BRAĆMI, KTÓRYCH POŁĄCZYŁA PASJA DO
           KLASYCZNEJ MOTORYZACJI, A W SZCZEGÓLNOŚCI DO STARYCH MOTOCYKLI Z PRZEŁOMU LAT 60-80 XX WIEKU.
