--- a/motorcycles/honda-cj250t.html
+++ b/motorcycles/honda-cj250t.html
@@ -56,7 +56,7 @@
 <!-- content -->
 <div class="container my-5">
   <div class="row mx-3">
-    <div class="col-md-6 m-0 p-0">
+    <div class="col-md-6 m-0 p-0 pop">
       <img class="img-fluid w-100" src="../assets/motorcycles/main_honda-cj250t.jpeg" alt="" />
     </div>
     <div class="col-md-6 m-0 p-0">
@@ -133,7 +133,7 @@
         </p>
     </div>
     <div class="col-md-6 float-right m-0 p-0">
-      <div>
+      <div class="pop">
       <img class="img-fluid w-100" src="/assets/motorcycles/content_honda-cj250t.jpg" alt="" />
     </div>
     </div>
@@ -161,5 +161,10 @@
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+  <script
+  src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+  crossorigin="anonymous"></script>
+  <script src="../assets/script/script.js"></script>
 </body>
 </html>
