--- a/motorcycles/triumph-scrambler-900.html
+++ b/motorcycles/triumph-scrambler-900.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
@@ -21,18 +22,18 @@
 <body>
   <header role="banner">
     <div class="container">
-    <div class="row m-0 p-0 ">
-      <div class="col banner-logo ps-3 pt-3">
-        <a href="../index.html"><img id="logo-main" src="../assets/warkot_logo.jpg" width="200" alt="Logo Thing main logo"></a>
-      </div>
+      <div class="row m-0 p-0 ">
+        <div class="col banner-logo ps-3 pt-3">
+          <a href="../index.html"><img id="logo-main" src="../assets/warkot_logo.jpg" width="200" alt="Logo Thing main logo"></a>
+        </div>
 
-      <div class="col text-end header-social-media">
-        <ul class="social-network">
-          <li><a class="text-decoration-none text-reset" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram fa-3x header-ico pe-2 pt-3"></i></a></li>
-          <li><a class="text-decoration-none text-reset" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook-square fa-3x header-ico pt-3"></i></a></li>
+        <div class="col text-end header-social-media">
+          <ul class="social-network">
+            <li><a class="text-decoration-none text-reset" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram fa-3x header-ico pe-2 pt-3"></i></a></li>
+            <li><a class="text-decoration-none text-reset" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook-square fa-3x header-ico pt-3"></i></a></li>
+        </div>
       </div>
     </div>
-  </div>
   </header>
 
   <nav class="navbar navbar-expand-md navbar-light">
@@ -52,30 +53,35 @@
     </div>
   </nav>
 
-<!-- content -->
-<div class="container my-5">
-  <div class="row mx-3">
-    <div class="col-md-6 m-0 p-0">
-      <img class="img-fluid w-100" src="../assets/motorcycles/main_triumph-scrambler-900.jpg" alt="triumph-scrambler-900" />
-    </div>
-    <div class="col-md-6 m-0 p-0">
-      <h1 class="ps-4 pt-2">TRIUMPH SCRAMBLER 900</h1>
-      <p class="font-5 p-xl-3 p-lg-2 p-md-1 p-xs-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i></i>ROCZNIK 2006</p>
-      <p class="font-5 p-xl-3 p-lg-2 p-md-1 p-xs-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i>POJEMNOŚĆ 900CC</p>
-    </div>
-    <div class="col-md-6 float-right m-0 p-0 pt-5">
-      <div>
-      <img class="img-fluid w-100" src="/assets/motorcycles/content_triumph-scrambler-900.jpg" alt="triumph-scrambler-900" />
-    </div>
-    </div>
+  <!-- content -->
+  <div class="container my-5">
+    <div class="row mx-3">
+      <!-- <div class="col-md-12"> -->
+      <!-- <h1 class="ps-4 pt-2 text-center">TRIUMPH SCRAMBLER 900</h1> -->
+      <!-- </div> -->
+      <div class="col-md-6 m-0 p-0">
+        <h1 class="ps-4 pt-2 ">TRIUMPH SCRAMBLER 900</h1>
 
-    <div class="app1 col-md-6 m-0 p-0 pt-3 ">
-      <p>
-        <h2 class="ps-4 pt-2">SPECYFIKACJA</h2>
+        <p class="font-5 p-0 m-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i></i>ROCZNIK 2006</p>
+        <p class="font-5 p-0 m-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i>POJEMNOŚĆ 900CC</p>
+        <div align=”justify” class="text-justify pt-4">
+          Projekt, który wykonany został na Scrambler Fever Rally 2020. Triumph zjawił się na naszej
+          drodze bardzo szybko i od razu wiedzieliśmy, że musimy go mieć. Egzemplarz, który wpadł w
+          nasze ręce był delikatnie zdekompletowany, ale posiadał szprychowe koła, silnik zasilany
+          gaźnikami i był już wyposażony w kompletny układ wydechowy marki ZARD, który świetnie
+          podkreśla charakterystykę pracy tego potężnego dwucylindrowca. Celem było zbudowanie klasycznego
+          angielskiego scramblera w stylu motocykli z lat 60. Motocykl jest pozbawiony wszelkich dodatków,
+          nie posiada m in. kierunkowskazów i kontrolek. Jest zwinny i nie boi się żadnych przeszkód ani
+          najcięższego terenu. To właśnie w takich warunkach motocykl daje największą radość z jazdy.
+        </div>
+      </div>
+      <div class="app1 col-md-6 m-0 p-0 pt-0 ps-5 pb-2">
+        <p>
+        <h2 class="ps-4 pt-0">SPECYFIKACJA</h2>
         <ul>
           <li>
             Serwis i synchronizacja gaźników, wymiana oleju i filtrów
-          <li>
+          </li>
           <li>
             Wzmocniony zestaw napędowy D.I.D
           </li>
@@ -89,8 +95,8 @@
             Usunięty system AIS
           </li>
         </ul>
-      </p>
-      <p>
+        </p>
+        <p>
         <h2 class="ps-4 pt-2">MODYFIKACJE</h2>
         <ul>
           <li>
@@ -121,43 +127,93 @@
             Opony Continental TKC 80
           </li>
         </ul>
-      </p>
-
-       <p>
-        Projekt, który wykonany został na Scrambler Fever Rally 2020. Triumph zjawił się na naszej
-        drodze bardzo szybko i od razu wiedzieliśmy, że musimy go mieć. Egzemplarz, który wpadł w
-        nasze ręce był  delikatnie zdekompletowany, ale posiadał szprychowe koła, silnik zasilany
-        gaźnikami i był już wyposażony w kompletny układ wydechowy marki ZARD, który świetnie
-        podkreśla charakterystykę pracy tego potężnego dwucylindrowca. Celem było zbudowanie klasycznego
-        angielskiego scramblera w stylu motocykli z lat 60. Motocykl jest pozbawiony  wszelkich dodatków,
-        nie posiada m in. kierunkowskazów i kontrolek. Jest zwinny i nie boi się żadnych przeszkód ani
-        najcięższego terenu.  To właśnie w takich warunkach motocykl daje największą radość z jazdy.
         </p>
+
+      </div>
     </div>
+    <div class="row mx-3">
 
+      <div class="col-md-6 m-0 p-0 pop p-2">
+        <img class="img-fluid w-100" src="../assets/motorcycles/main_triumph-scrambler-900.jpg" alt="triumph-scrambler-900" />
+      </div>
+
+      <div class="col-md-6 float-right m-0 p-0 p-2">
+        <div class="pop">
+          <img class="img-fluid w-100" src="/assets/motorcycles/content_triumph-scrambler-900.jpg" alt="triumph-scrambler-900" />
+        </div>
+      </div>
+
+
+
+
+
+
+      <div class="col-md-6 float-right m-0 p-0 p-2">
+        <div class="pop">
+          <img class="img-fluid w-100" src="/assets/motorcycles/triupmh_scrambler_900/triupmh_scrambler_900_7.jpg" alt="triumph-scrambler-900" />
+        </div>
+      </div>
+
+      <div class="col-md-6 float-right m-0 p-0 p-2">
+        <div class="pop">
+          <img class="img-fluid w-100" src="/assets/motorcycles/triupmh_scrambler_900/triupmh_scrambler_900_5.jpg" alt="triumph-scrambler-900" />
+        </div>
+      </div>
+
+
+      <div class="col-md-6 float-right m-0 p-0 p-2">
+        <div class="pop">
+          <img class="img-fluid w-100" src="/assets/motorcycles/triupmh_scrambler_900/triupmh_scrambler_900_10.jpg" alt="triumph-scrambler-900" />
+        </div>
+      </div>
+
+      <div class="col-md-6 float-right m-0 p-0 p-2">
+        <div class="pop">
+          <img class="img-fluid w-100" src="/assets/motorcycles/triupmh_scrambler_900/triupmh_scrambler_900_6.jpg" alt="triumph-scrambler-900" />
+        </div>
+      </div>
+
+      <div class="col-md-6 float-right m-0 p-0 p-2">
+        <div class="pop">
+          <img class="img-fluid w-100" src="/assets/motorcycles/triupmh_scrambler_900/triupmh_scrambler_900_8.jpg" alt="triumph-scrambler-900" />
+        </div>
+      </div>
+
+      <div class="col-md-6 m-0 p-0">
+        <div class="col-md-12 float-right m-0 p-0 p-2">
+          <div class="pop">
+            <img class="img-fluid w-100" src="/assets/motorcycles/triupmh_scrambler_900/triupmh_scrambler_900_9.jpg" alt="triumph-scrambler-900" />
+          </div>
+        </div>
+      </div>
+
+
+
+    </div>
   </div>
-</div>
-<!-- end of content  -->
+  <!-- end of content  -->
 
-<footer>
+  <footer>
     <div class="footer">
-  <div class="text-center py-4">
-    ZNAJDZIESZ NAS:
-  </div class="text-center">
+      <div class="text-center py-4">
+        ZNAJDZIESZ NAS:
+      </div class="text-center">
 
-    <ul class="social-network social-circle p-0">
-      <li><a class="icoYoutube" href="#" title="Youtube"><i class="fa fa-youtube"></i></a></li>
-      <li><a class="icoFacebook" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-      <li><a class="icoInstagram" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram"></i></a></li>
-    </ul>
-    <div id="copyright-note">
-    &copy; Copyright 2020 Kamil Tartanus
-  </div>
-  </div>
+      <ul class="social-network social-circle p-0">
+        <li><a class="icoYoutube" href="#" title="Youtube"><i class="fa fa-youtube"></i></a></li>
+        <li><a class="icoFacebook" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+        <li><a class="icoInstagram" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram"></i></a></li>
+      </ul>
+      <div id="copyright-note">
+        &copy; Copyright 2020 Kamil Tartanus
+      </div>
+    </div>
   </footer>
 
 
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
+  <script src="../assets/script/script.js"></script>
 </body>
+
 </html>
