--- a/motorcycles.html
+++ b/motorcycles.html
@@ -88,7 +88,7 @@
 
       <div class="col-sm-6 col-md-4 col-lg-3">
         <a class="text-decoration-none text-reset" href="/motorcycles/triumph-scrambler-900.html">
-          <img class="img-fluid" src="/assets/motorcycles/main_triumph-scrambler-900.jpg" alt="" />
+          <img class="img-fluid" src="assets/motorcycles/triupmh_scrambler_900/triupmh_scrambler_900_1.jpg" alt="triupmh_scrambler_900" />
         </a>
         <div class="pt-3">
           <a class="text-decoration-none text-reset" href="/motorcycles/triumph-scrambler-900.html">
