--- a/motorcycles/triumph-scrambler-900.html
+++ b/motorcycles/triumph-scrambler-900.html
@@ -57,14 +57,11 @@
   <!-- content -->
   <div class="container my-5">
     <div class="row mx-3">
-      <!-- <div class="col-md-12"> -->
-      <!-- <h1 class="ps-4 pt-2 text-center">TRIUMPH SCRAMBLER 900</h1> -->
-      <!-- </div> -->
       <div class="col-md-6 m-0 p-0">
         <h1 class="ps-4 pt-2 ">TRIUMPH SCRAMBLER 900</h1>
 
-        <p class="font-5 p-0 m-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i></i>ROCZNIK 2006</p>
-        <p class="font-5 p-0 m-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i>POJEMNOŚĆ 900CC</p>
+        <p class="p-0 m-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i></i>ROCZNIK 2006</p>
+        <p class="p-0 m-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i>POJEMNOŚĆ 900CC</p>
         <div align=”justify” class="text-justify pt-4">
           Projekt, który wykonany został na Scrambler Fever Rally 2020. Triumph zjawił się na naszej
           drodze bardzo szybko i od razu wiedzieliśmy, że musimy go mieć. Egzemplarz, który wpadł w
@@ -76,7 +73,7 @@
           najcięższego terenu. To właśnie w takich warunkach motocykl daje największą radość z jazdy.
         </div>
       </div>
-      <div class="app1 col-md-6 m-0 p-0 pt-0 ps-5 pb-2">
+      <div class="app1 col-md-6 m-0 p-0 pt-0 ps-md-2 ps-lg-5 pb-2">
         <p>
         <h2 class="ps-4 pt-0">SPECYFIKACJA</h2>
         <ul>
@@ -132,63 +129,58 @@
 
       </div>
     </div>
-    <div class="row mx-3">
+    <div class="row mx-md-3">
 
-      <div class="col-md-6 m-0 p-0 pop p-2">
-        <img class="img-fluid w-100" src="../assets/motorcycles/main_triumph-scrambler-900.jpg" alt="triumph-scrambler-900" />
+      <div class="col-md-6 m-0 p-0 p-md-2 pb-2">
+        <div class="pop">
+        <img class="img-fluid w-100" src="../assets/motorcycles/triupmh_scrambler_900/triupmh_scrambler_900_1.jpg" alt="triumph-scrambler-900" />
+      </div>
       </div>
 
-      <div class="col-md-6 float-right m-0 p-0 p-2">
+      <div class="col-md-6 float-right m-0 p-0 p-md-2 pb-2">
         <div class="pop">
-          <img class="img-fluid w-100" src="/assets/motorcycles/content_triumph-scrambler-900.jpg" alt="triumph-scrambler-900" />
+          <img class="img-fluid w-100" src="/assets/motorcycles/triupmh_scrambler_900/triupmh_scrambler_900_2.jpg" alt="triumph-scrambler-900" />
+        </div>
+      </div>
+
+      <div class="col-md-6 float-right m-0 p-0 p-md-2 pb-2">
+        <div class="pop">
+          <img class="img-fluid w-100" src="/assets/motorcycles/triupmh_scrambler_900/triupmh_scrambler_900_3.jpg" alt="triumph-scrambler-900" />
+        </div>
+      </div>
+
+      <div class="col-md-6 float-right m-0 p-0 p-md-2 pb-2">
+        <div class="pop">
+          <img class="img-fluid w-100" src="/assets/motorcycles/triupmh_scrambler_900/triupmh_scrambler_900_4.jpg" alt="triumph-scrambler-900" />
         </div>
       </div>
 
 
-
-
-
-
-      <div class="col-md-6 float-right m-0 p-0 p-2">
-        <div class="pop">
-          <img class="img-fluid w-100" src="/assets/motorcycles/triupmh_scrambler_900/triupmh_scrambler_900_7.jpg" alt="triumph-scrambler-900" />
-        </div>
-      </div>
-
-      <div class="col-md-6 float-right m-0 p-0 p-2">
+      <div class="col-md-6 float-right m-0 p-0 p-md-2 pb-2">
         <div class="pop">
           <img class="img-fluid w-100" src="/assets/motorcycles/triupmh_scrambler_900/triupmh_scrambler_900_5.jpg" alt="triumph-scrambler-900" />
         </div>
       </div>
 
-
-      <div class="col-md-6 float-right m-0 p-0 p-2">
-        <div class="pop">
-          <img class="img-fluid w-100" src="/assets/motorcycles/triupmh_scrambler_900/triupmh_scrambler_900_10.jpg" alt="triumph-scrambler-900" />
-        </div>
-      </div>
-
-      <div class="col-md-6 float-right m-0 p-0 p-2">
+      <div class="col-md-6 float-right m-0 p-0 p-md-2 pb-2">
         <div class="pop">
           <img class="img-fluid w-100" src="/assets/motorcycles/triupmh_scrambler_900/triupmh_scrambler_900_6.jpg" alt="triumph-scrambler-900" />
         </div>
       </div>
 
-      <div class="col-md-6 float-right m-0 p-0 p-2">
+      <div class="col-md-6 float-right m-0 p-0 p-md-2 pb-2">
         <div class="pop">
-          <img class="img-fluid w-100" src="/assets/motorcycles/triupmh_scrambler_900/triupmh_scrambler_900_8.jpg" alt="triumph-scrambler-900" />
+          <img class="img-fluid w-100" src="/assets/motorcycles/triupmh_scrambler_900/triupmh_scrambler_900_7.jpg" alt="triumph-scrambler-900" />
         </div>
       </div>
 
       <div class="col-md-6 m-0 p-0">
-        <div class="col-md-12 float-right m-0 p-0 p-2">
+        <div class="col-md-12 float-right m-0 p-0 p-md-2 pb-2">
           <div class="pop">
-            <img class="img-fluid w-100" src="/assets/motorcycles/triupmh_scrambler_900/triupmh_scrambler_900_9.jpg" alt="triumph-scrambler-900" />
+            <img class="img-fluid w-100" src="/assets/motorcycles/triupmh_scrambler_900/triupmh_scrambler_900_8.jpg" alt="triumph-scrambler-900" />
           </div>
         </div>
       </div>
-
-
 
     </div>
   </div>
