--- a/motorcycles/bmw-r45-1.html
+++ b/motorcycles/bmw-r45-1.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
 
   <title>Warkot motorcycles - to historia trzech braci z pasją do motocykli starszej generacji.
-     Z pasją i zaangażowaniem realizujemy własne projekty, ale również te które zlecą nam nasi klieneci.</title>
+    Z pasją i zaangażowaniem realizujemy własne projekty, ale również te które zlecą nam nasi klieneci.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
@@ -58,19 +58,16 @@
   <div class="container my-5">
     <div class="row mx-3">
       <div class="col-md-6 m-0 p-0">
-        <h1 class="ps-4 pt-2 ">TRIUMPH SCRAMBLER 900</h1>
+        <h1 class="ps-4 pt-2 ">BMW R45</h1>
 
-        <p class="p-0 m-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i></i>ROCZNIK 2006</p>
-        <p class="p-0 m-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i>POJEMNOŚĆ 900CC</p>
+        <p class="p-0 m-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i></i>ROCZNIK 1985</p>
+        <p class="p-0 m-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i>POJEMNOŚĆ 500CC</p>
         <div align=”justify” class="text-justify pt-4">
-          Projekt, który wykonany został na Scrambler Fever Rally 2020. Triumph zjawił się na naszej
-          drodze bardzo szybko i od razu wiedzieliśmy, że musimy go mieć. Egzemplarz, który wpadł w
-          nasze ręce był delikatnie zdekompletowany, ale posiadał szprychowe koła, silnik zasilany
-          gaźnikami i był już wyposażony w kompletny układ wydechowy marki ZARD, który świetnie
-          podkreśla charakterystykę pracy tego potężnego dwucylindrowca. Celem było zbudowanie klasycznego
-          angielskiego scramblera w stylu motocykli z lat 60. Motocykl jest pozbawiony wszelkich dodatków,
-          nie posiada m in. kierunkowskazów i kontrolek. Jest zwinny i nie boi się żadnych przeszkód ani
-          najcięższego terenu. To właśnie w takich warunkach motocykl daje największą radość z jazdy.
+          Jeden z pierwszych projektów naszego garażu. Motocykl kupiony pod niemiecką granicą,
+          gdzie czekał na wyrwanie z rąk handlarza samochodów. Inspiracją do jego budowy były
+          maszyny z francuskiego warsztatu Blitz Motorcycles. Głównym założeniem było uzyskanie
+          klasycznego wyglądu motocykli z lat 50 i 60 XX wieku. Motocykl uniwersalny i niezawodny,
+          którym można pewnie podróżować po drogach asfaltowych, ale również przemierzać szutrowe bezdroża.
         </div>
       </div>
       <div class="app1 col-md-6 m-0 p-0 pt-0 ps-md-2 ps-lg-5 pb-2">
@@ -78,19 +75,19 @@
         <h2 class="ps-4 pt-0">SPECYFIKACJA</h2>
         <ul>
           <li>
-            Serwis i synchronizacja gaźników, wymiana oleju i filtrów
+            Silnik: kompletny serwis głowic, serwis i synchronizacja gaźników, wymiana olejów i filtrów.
           </li>
           <li>
-            Wzmocniony zestaw napędowy D.I.D
+            Kompletny serwis dyferencjału
           </li>
           <li>
             Serwis przedniego zawieszenia
           </li>
           <li>
-            Serwis hamulców
+            Serwis hamulców przednich i tylnych
           </li>
           <li>
-            Usunięty system AIS
+            Wymiana łożysk tocznych w elementach eksploatacyjnych
           </li>
         </ul>
         </p>
@@ -98,31 +95,28 @@
         <h2 class="ps-4 pt-2">MODYFIKACJE</h2>
         <ul>
           <li>
-            Skrócona i zamknięta tylna część ramy
+            Czarne elementy motocykla pomalowane proszkowo
           </li>
           <li>
-            Zbiornik pomalowany w lakierze czarna perła
+            Lakier marrakesh Brown z palety BMW
           </li>
           <li>
-            Od podstaw wykonane siedzenie” na odlewie z lekkiego materiału
+            Ręcznie wykonane mocowania przedniej lampy
           </li>
           <li>
-            Kierownica Tomaselli
+            Kierownica typu bobber
           </li>
           <li>
-            Aluminiowe ręcznie wykonane błotniki
+            Skrócona tylna część ramy
           </li>
           <li>
-            Aluminiowa ręcznie wykonana osłona pod silnik
+            Lampa przednia MZ ETZ 251
           </li>
           <li>
-            Aluminiowa ręcznie wykonana osłona łańcucha
+            Opony Avon MKII
           </li>
           <li>
-            Kompletny układ wydechowy ZARD
-          </li>
-          <li>
-            Opony Continental TKC 80
+            Kierunkowskazy typu Mini Bullet
           </li>
         </ul>
         </p>
@@ -133,51 +127,51 @@
 
       <div class="col-md-6 m-0 p-0 p-md-2 pb-2">
         <div class="pop">
-        <img class="img-fluid w-100" src="../assets/motorcycles/triupmh_scrambler_900/triupmh_scrambler_900_1.jpg" alt="triumph scrambler 900 zdjęcie nr 1" />
-      </div>
-      </div>
-
-      <div class="col-md-6 float-right m-0 p-0 p-md-2 pb-2">
-        <div class="pop">
-          <img class="img-fluid w-100" src="/assets/motorcycles/triupmh_scrambler_900/triupmh_scrambler_900_2.jpg" alt="triumph scrambler 900 zdjęcie nr 2" />
+          <img class="img-fluid w-100" src="../assets/motorcycles/bmw_r45/bmw_r45_1.jpg" alt="bmw r45 zdjęcie nr 1" />
         </div>
       </div>
 
       <div class="col-md-6 float-right m-0 p-0 p-md-2 pb-2">
         <div class="pop">
-          <img class="img-fluid w-100" src="/assets/motorcycles/triupmh_scrambler_900/triupmh_scrambler_900_3.jpg" alt="triumph scrambler 900 zdjęcie nr 3" />
+          <img class="img-fluid w-100" src="../assets/motorcycles/bmw_r45/bmw_r45_2.jpg" alt="bmw r45 zdjęcie nr 2" />
         </div>
       </div>
 
       <div class="col-md-6 float-right m-0 p-0 p-md-2 pb-2">
         <div class="pop">
-          <img class="img-fluid w-100" src="/assets/motorcycles/triupmh_scrambler_900/triupmh_scrambler_900_4.jpg" alt="triumph scrambler 900 zdjęcie nr 4" />
+          <img class="img-fluid w-100" src="../assets/motorcycles/bmw_r45/bmw_r45_3.jpg" alt="bmw r45 zdjęcie nr 3" />
+        </div>
+      </div>
+
+      <div class="col-md-6 float-right m-0 p-0 p-md-2 pb-2">
+        <div class="pop">
+          <img class="img-fluid w-100" src="../assets/motorcycles/bmw_r45/bmw_r45_4.jpg" alt="bmw r45 zdjęcie nr 4" />
         </div>
       </div>
 
 
       <div class="col-md-6 float-right m-0 p-0 p-md-2 pb-2">
         <div class="pop">
-          <img class="img-fluid w-100" src="/assets/motorcycles/triupmh_scrambler_900/triupmh_scrambler_900_5.jpg" alt="triumph scrambler 900 zdjęcie nr 5" />
+          <img class="img-fluid w-100" src="../assets/motorcycles/bmw_r45/bmw_r45_5.jpg" alt="bmw r45 zdjęcie nr 5" />
         </div>
       </div>
 
       <div class="col-md-6 float-right m-0 p-0 p-md-2 pb-2">
         <div class="pop">
-          <img class="img-fluid w-100" src="/assets/motorcycles/triupmh_scrambler_900/triupmh_scrambler_900_6.jpg" alt="triumph scrambler 900 zdjęcie nr 6" />
+          <img class="img-fluid w-100" src="../assets/motorcycles/bmw_r45/bmw_r45_6.jpg" alt="bmw r45 zdjęcie nr 6" />
         </div>
       </div>
 
       <div class="col-md-6 float-right m-0 p-0 p-md-2 pb-2">
         <div class="pop">
-          <img class="img-fluid w-100" src="/assets/motorcycles/triupmh_scrambler_900/triupmh_scrambler_900_7.jpg" alt="triumph scrambler 900 zdjęcie nr 7" />
+          <img class="img-fluid w-100" src="../assets/motorcycles/bmw_r45/bmw_r45_7.jpg" alt="bmw r45 zdjęcie nr 7" />
         </div>
       </div>
 
       <div class="col-md-6 m-0 p-0">
         <div class="col-md-12 float-right m-0 p-0 p-md-2 pb-2">
           <div class="pop">
-            <img class="img-fluid w-100" src="/assets/motorcycles/triupmh_scrambler_900/triupmh_scrambler_900_8.jpg" alt="triumph scrambler 900 zdjęcie nr 8" />
+            <img class="img-fluid w-100" src="../assets/motorcycles/bmw_r45/bmw_r45_8.jpg" alt="bmw r45 zdjęcie nr 8" />
           </div>
         </div>
       </div>
