added honda motorcycle page with gallery

--- a/motorcycles/honda-cj250t.html
+++ b/motorcycles/honda-cj250t.html
@@ -1,10 +1,12 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
+  <title>Warkot motorcycles - to historia trzech braci z pasją do motocykli starszej generacji.
+     Z pasją i zaangażowaniem realizujemy własne projekty, ale również te które zlecą nam nasi klieneci.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
@@ -22,24 +24,22 @@
 <body>
   <header role="banner">
     <div class="container">
-    <div class="row m-0 p-0">
-      <div class="col banner-logo">
-        <a href="../index.html"><img id="logo-main" src="../assets/warkot_logo.jpg" width="200" alt="Logo Thing main logo"></a>
-      </div>
+      <div class="row m-0 p-0 ">
+        <div class="col ps-3 pt-3">
+          <a href="../index.html"><img id="logo-main" class="center-logo" src="../assets/warkot_logo1.jpg" width="200" alt="warkot logo"></a>
+        </div>
 
-      <div class="col text-end header-social-media">
-        <ul class="social-network">
-          <li><a class="text-decoration-none text-reset" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram fa-3x header-ico pe-2 pt-3"></i></a></li>
-          <li><a class="text-decoration-none text-reset" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook-square fa-3x header-ico pt-3"></i></a></li>
-        </ul>
+        <div class="col text-end header-social-media">
+          <ul class="social-network">
+            <li><a class="text-decoration-none text-reset" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram fa-3x header-ico pe-2 pt-3"></i></a></li>
+            <li><a class="text-decoration-none text-reset" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook-square fa-3x header-ico pe-2 pt-3"></i></a></li>
+        </div>
       </div>
     </div>
-  </div>
   </header>
 
   <nav class="navbar navbar-expand-md navbar-light">
     <div class="container">
-      <!-- <a class="navbar-brand" href="#">Navbar</a> -->
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -54,20 +54,26 @@
     </div>
   </nav>
 
-<!-- content -->
-<div class="container my-5">
-  <div class="row mx-3">
-    <div class="col-md-6 m-0 p-0 pop">
-      <img class="img-fluid w-100" src="../assets/motorcycles/main_honda-cj250t.jpeg" alt="" />
-    </div>
-    <div class="col-md-6 m-0 p-0">
-      <h1 class="ps-4 pt-2">HONDA CJ250T</h1>
-      <p class="font-5 p-xl-3 p-lg-2 p-md-1 p-xs-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i></i>ROCZNIK 1978</p>
-      <p class="font-5 p-xl-3 p-lg-2 p-md-1 p-xs-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i>POJEMNOŚĆ 250CC</p>
-    </div>
-    <div class="app1 col-md-6 m-0 p-0 pt-3">
-      <p>
-        <h2 class="ps-4 pt-2">SPECYFIKACJA</h2>
+  <!-- content -->
+  <div class="container my-5">
+    <div class="row mx-3">
+      <div class="col-md-6 m-0 p-0">
+        <h1 class="ps-4 pt-2 ">HONDA CJ250T</h1>
+
+        <p class="p-0 m-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i></i>ROCZNIK 1978</p>
+        <p class="p-0 m-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i>POJEMNOŚĆ 250CC</p>
+        <div align=”justify” class="text-justify pt-4">
+          Motocykl, który wymagał od nas dużo serca i cierpliwości. Kiedy go kupiliśmy nie odpalał,
+          a jego ówczesny właściciel najzwyczajniej nie miał czasu, aby przywrócić go do sprawności.
+          Zbudowany i inspirowany motocyklami z japońskiego garażu brat style. Prostota budowy i
+          łatwość obsługi to największe zalety tego motocykla. Wystarczy jeden kopniak w starter nożny,
+          aby mały dwucylindrowiec obudził się do życia. Ponadczasowa sylwetka i chromowane szprychowe
+          koła świetnie dopełnią wygląd każdego motocyklisty, który lubi z klasą poruszać się z punktu A do punktu B.
+        </div>
+      </div>
+      <div class="app1 col-md-6 m-0 p-0 pt-0 ps-md-2 ps-lg-5 pb-2">
+        <p>
+        <h2 class="ps-4 pt-0">SPECYFIKACJA</h2>
         <ul>
           <li>
             Silnik:  kompletny serwis głowicy, serwis i synchronizacja gaźników pod zamontowane filtry stożkowe, wymiana oleju, ustawienie zapłonu.          </li>
@@ -90,8 +96,8 @@
             Wycentrowanie kół
           </li>
         </ul>
-      </p>
-      <p>
+        </p>
+        <p>
         <h2 class="ps-4 pt-2">MODYFIKACJE</h2>
         <ul>
           <li>
@@ -122,50 +128,127 @@
             Oryginalne lusterko sygnowane logiem Hondy z epoki
           </li>
         </ul>
-      </p>
-
-       <p>
-         Motocykl, który wymagał od nas dużo serca i cierpliwości. Kiedy go kupiliśmy nie odpalał,
-          a jego ówczesny właściciel najzwyczajniej nie miał czasu, aby przywrócić go do sprawności.
-          Zbudowany i inspirowany motocyklami z japońskiego garażu brat style. Prostota budowy i
-          łatwość obsługi to największe zalety tego motocykla. Wystarczy jeden kopniak w starter nożny,
-          aby mały dwucylindrowiec obudził się do życia. Ponadczasowa sylwetka i chromowane szprychowe
-          koła świetnie dopełnią wygląd każdego motocyklisty, który lubi z klasą poruszać się z punktu A do punktu B.
         </p>
+
+      </div>
     </div>
-    <div class="col-md-6 float-right m-0 p-0">
-      <div class="pop">
-      <img class="img-fluid w-100" src="/assets/motorcycles/content_honda-cj250t.jpg" alt="" />
-    </div>
+    <div class="row mx-md-3">
+
+      <div class="col-md-6 m-0 p-0 p-md-2 pb-2">
+        <div class="pop">
+        <img class="img-fluid w-100" src="../assets/motorcycles/honda_cj250t/honda_cj250t_1.jpg" alt="honda cj250t zdjęcie nr 1" />
+      </div>
+      </div>
+
+      <div class="col-md-6 float-right m-0 p-0 p-md-2 pb-2">
+        <div class="pop">
+          <img class="img-fluid w-100" src="../assets/motorcycles/honda_cj250t/honda_cj250t_2.jpg" alt="honda cj250t zdjęcie nr 2" />
+        </div>
+      </div>
+
+      <div class="col-md-6 float-right m-0 p-0 p-md-2 pb-2">
+        <div class="pop">
+          <img class="img-fluid w-100" src="../assets/motorcycles/honda_cj250t/honda_cj250t_3.jpg" alt="honda cj250t zdjęcie nr 3" />
+        </div>
+      </div>
+
+      <div class="col-md-6 float-right m-0 p-0 p-md-2 pb-2">
+        <div class="pop">
+          <img class="img-fluid w-100" src="../assets/motorcycles/honda_cj250t/honda_cj250t_4.jpg" alt="honda cj250t zdjęcie nr 4" />
+        </div>
+      </div>
+
+
+      <div class="col-md-6 float-right m-0 p-0 p-md-2 pb-2">
+        <div class="pop">
+          <img class="img-fluid w-100" src="../assets/motorcycles/honda_cj250t/honda_cj250t_5.jpg" alt="honda cj250t zdjęcie nr 5" />
+        </div>
+      </div>
+
+      <div class="col-md-6 float-right m-0 p-0 p-md-2 pb-2">
+        <div class="pop">
+          <img class="img-fluid w-100" src="../assets/motorcycles/honda_cj250t/honda_cj250t_6.jpg" alt="honda cj250t zdjęcie nr 6" />
+        </div>
+      </div>
+
+      <div class="col-md-6 float-right m-0 p-0 p-md-2 pb-2">
+        <div class="pop">
+          <img class="img-fluid w-100" src="../assets/motorcycles/honda_cj250t/honda_cj250t_7.jpg" alt="honda cj250t zdjęcie nr 7" />
+        </div>
+      </div>
+
+      <div class="col-md-6 m-0 p-0">
+        <div class="col-md-12 float-right m-0 p-0 p-md-2 pb-2">
+          <div class="pop">
+            <img class="img-fluid w-100" src="../assets/motorcycles/honda_cj250t/honda_cj250t_8.jpg" alt="honda cj250t zdjęcie nr 8" />
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-6 m-0 p-0">
+        <div class="col-md-12 float-right m-0 p-0 p-md-2 pb-2">
+          <div class="pop">
+            <img class="img-fluid w-100" src="../assets/motorcycles/honda_cj250t/honda_cj250t_9.jpg" alt="honda cj250t zdjęcie nr 9" />
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-6 m-0 p-0">
+        <div class="col-md-12 float-right m-0 p-0 p-md-2 pb-2">
+          <div class="pop">
+            <img class="img-fluid w-100" src="../assets/motorcycles/honda_cj250t/honda_cj250t_10.jpg" alt="honda cj250t zdjęcie nr 10" />
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-6 m-0 p-0">
+        <div class="col-md-12 float-right m-0 p-0 p-md-2 pb-2">
+          <div class="pop">
+            <img class="img-fluid w-100" src="../assets/motorcycles/honda_cj250t/honda_cj250t_11.jpg" alt="honda cj250t zdjęcie nr 11" />
+          </div>
+        </div>
+
+        <div class="col-md-12 float-right m-0 p-0 p-md-2 pb-2">
+          <div class="pop">
+            <img class="img-fluid w-100" src="../assets/motorcycles/honda_cj250t/honda_cj250t_12.jpg" alt="honda cj250t zdjęcie nr 12" />
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-6 m-0 p-0">
+        <div class="col-md-12 float-right m-0 p-0 p-md-2 pb-2">
+          <div class="pop">
+            <img class="img-fluid w-100" src="../assets/motorcycles/honda_cj250t/honda_cj250t_13.jpg" alt="honda cj250t zdjęcie nr 13" />
+          </div>
+        </div>
+      </div>
+
+
     </div>
   </div>
-</div>
-<!-- end of content  -->
+  <!-- end of content  -->
 
-<footer>
+  <footer>
     <div class="footer">
-  <div class="text-center py-4">
-    ZNAJDZIESZ NAS:
-  </div class="text-center">
+      <div class="text-center py-4">
+        ZNAJDZIESZ NAS:
+      </div class="text-center">
 
-    <ul class="social-network social-circle p-0">
-      <li><a class="icoYoutube" href="#" title="Youtube"><i class="fa fa-youtube"></i></a></li>
-      <li><a class="icoFacebook" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-      <li><a class="icoInstagram" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram"></i></a></li>
-    </ul>
-    <div id="copyright-note">
-    &copy; Copyright 2020 Kamil Tartanus
-  </div>
-  </div>
+      <ul class="social-network social-circle p-0">
+        <li><a class="icoYoutube" href="#" title="Youtube"><i class="fa fa-youtube"></i></a></li>
+        <li><a class="icoFacebook" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+        <li><a class="icoInstagram" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram"></i></a></li>
+      </ul>
+      <div id="copyright-note">
+        &copy; Copyright 2021 Kamil Tartanus
+      </div>
+    </div>
   </footer>
 
 
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-  <script
-  src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-  integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
-  crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
   <script src="../assets/script/script.js"></script>
 </body>
+
 </html>
